# hsctosql

./: .gitignore  CMakeLists.txt  LICENSE  README.md  database.cpp  database.h  db_structure.xlsx  main.cpp
dbsources/: hsc_color_codes.txt  hsc_data_references.txt  hsc_elements.txt  hsc_units.txt
misc/: utilities.cpp  utilities.h
